update with size parameter chose in dropdown, problem with disapearing check after open another dropdown fixed.

--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -93,7 +93,7 @@ $theme-blue: #006ce4;
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
 
-$kui-theme: #7ebd0d;
+$kui-theme: #c6ad8f;
 $kui-theme-dark: #102838;
 $kui-green-highlight: #55b401;
 
