--- a/themes/flatgroup/scss/main.css
+++ b/themes/flatgroup/scss/main.css
@@ -578,7 +578,7 @@ button {
   transform: translateY(-50%);
   width: 15px;
   height: 12px;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%2301b474" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
   background-repeat: no-repeat;
   background-size: contain;
 }
