--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -93,15 +93,14 @@ $theme-blue: #006ce4;
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
 
-$kui-theme: #c6ad8f;
+$kui-theme: #1c2637;
 $kui-theme-dark: #102838;
-$kui-green-highlight: #55b401;
+$kui-theme-200: #a67f5f;
+$kui-green-highlight: #3cd37b;
+
+$kui-theme-light: #f6f6f6;
 
 $kui-white: white;
 $kui-black: #212121;
-$kui-disabled: #f2f4f5;
-$kui-disabled-200: #e4e4e7;
-$kui-disabled-500: #8e939c;
-$kui-disabled-600: #848485;
-$kui-disabled-border: #e2e3e6;
-$kui-disabled-border-500: #d3d5d9;
+$kui-disabled: #f6f6f6;
+$kui-disabled-200: #e9e9e9;
