--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -76,6 +76,7 @@
         align-items: center;
         padding-block: 15px 15px;
         box-shadow: rgba(99, 99, 99, 0.1) 1px 2px 5px 0px;
+        border-bottom: 1px solid $kui-disabled-200;
         position: sticky;
         background: white;
         z-index: 100;
@@ -84,14 +85,17 @@
         #advancedFilters__close {
           margin-right: auto;
           margin-left: 20px;
+          background: $kui-theme-light;
+          padding: 7px;
+          border-radius: 4px;
 
           svg {
-            width: 23px;
+            width: 16px;
             height: auto;
 
             path {
-              stroke: $black-color-500;
-              stroke-width: 2;
+              stroke: $kui-theme;
+              stroke-width: 2.7;
             }
           }
         }
@@ -101,8 +105,8 @@
           left: 15%;
           margin: 0 0 2px 0;
           color: $black-color-500;
-          font-size: 23px;
-          font-weight: 700;
+          font-size: 22px;
+          font-weight: 600;
           line-height: 1.32;
           overflow: hidden;
           text-align: center;
@@ -113,7 +117,7 @@
         #advancedFilters__clear-btn {
           margin-left: auto;
           margin-right: 20px;
-          font-size: 17px;
+          font-size: 16px;
           font-weight: 470;
           color: $black-color-500;
           line-height: 1;
@@ -175,10 +179,11 @@
                   box-sizing: border-box;
                   touch-action: manipulation;
                   transition: transform 0.1s ease;
+                  box-shadow: inset 0 0 0 1px $kui-disabled-200;
 
                   &.selected {
                     color: $kui-theme;
-                    box-shadow: inset 0 0 0 1.8px $kui-theme;
+                    box-shadow: inset 0 0 0 1px $kui-green-highlight;
                     background: $pure-white;
                     transform: scale(1);
                     animation: bounceBack 0.3s ease;
@@ -201,7 +206,7 @@
 
                 .investment-button {
                   width: auto;
-                  font-size: 17px;
+                  font-size: 16px;
                   font-weight: 400;
                 }
 
@@ -212,7 +217,7 @@
                 }
 
                 .features-button {
-                  font-size: 17px;
+                  font-size: 16px;
                   padding: 11px 14px;
                   width: auto;
                 }
@@ -220,7 +225,7 @@
                 .room-button {
                   width: 51px;
                   height: 48px;
-                  font-size: 17px;
+                  font-size: 16px;
                 }
 
                 .floor-button {
@@ -284,10 +289,10 @@
                 .advancedFilters__dropdown-button {
                   background-color: $kui-disabled;
                   padding: 0 15px;
-                  font-size: 17px;
+                  font-size: 16px;
                   color: $kui-black;
                   height: 48px;
-                  border: none;
+                  border: 1px solid $kui-disabled-200;
                   box-sizing: border-box;
                   touch-action: manipulation;
                   border-radius: 4px;
@@ -313,6 +318,7 @@
                 .advancedFilters__dropdown-content {
                   display: none;
                   position: absolute;
+                  border: 1px solid $kui-disabled-200;
                   border-top: 2px solid $kui-theme;
                   background-color: $kui-disabled;
                   width: 100%;
@@ -398,6 +404,10 @@
                     .advancedFilters__dropdown-item {
                       position: relative;
 
+                      &.selected {
+                        background: $kui-white;
+                      }
+
                       &::after {
                         content: '';
                       }
@@ -410,7 +420,7 @@
                         transform: translateY(-50%);
                         width: 15px;
                         height: 12px;
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%2301b474" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%233cd37b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
                         background-repeat: no-repeat;
                         background-size: contain;
                       }
@@ -585,6 +595,7 @@
         bottom: 0;
         height: 81px;
         width: 100%;
+        border-top: 1px solid $kui-disabled-200;
         box-shadow: rgba(99, 99, 99, 0.1) 0px -1px 5px 0px;
 
         .advancedFilters__buttons__container {
@@ -593,7 +604,7 @@
           justify-content: space-between;
 
           .advancedFilters__search__button {
-            background: $kui-theme-dark;
+            background: $kui-theme;
             padding: 7px 12px;
             font-weight: 600;
             border-radius: 4px;
