--- a/themes/flatgroup/scss/main.css
+++ b/themes/flatgroup/scss/main.css
@@ -124,7 +124,7 @@ button {
   opacity: 0.8;
 }
 
-#search-bar-wrapper {
+#searchBarWrapper {
   position: sticky;
   top: 0;
   transition: top 0.23s ease-in-out;
@@ -132,16 +132,16 @@ button {
   z-index: 10;
   box-shadow: rgba(99, 99, 99, 0.1) 1px 2px 5px 0px;
 }
-#search-bar-wrapper .container {
+#searchBarWrapper .container {
   padding-block: 15px;
 }
-#search-bar-wrapper .container .flex .filters-trigger {
+#searchBarWrapper .container .flex .filters-trigger {
   display: flex;
   width: 100%;
   gap: 7px;
 }
-#search-bar-wrapper .container .flex .filters-trigger button {
-  background: #102838;
+#searchBarWrapper .container .flex .filters-trigger button {
+  background: #1c2637;
   border: none;
   height: 42px;
   width: 100%;
@@ -155,72 +155,72 @@ button {
   justify-content: center;
   gap: 7px;
 }
-#search-bar-wrapper .container .flex .filters-trigger button svg {
+#searchBarWrapper .container .flex .filters-trigger button svg {
   width: 21px;
   height: auto;
   margin-top: 2px;
 }
-#search-bar-wrapper .container .flex .filters-trigger button svg path {
+#searchBarWrapper .container .flex .filters-trigger button svg path {
   stroke: white;
   stroke-width: 2;
 }
-#search-bar-wrapper .container .flex .filters-trigger button:nth-child(3) svg path {
+#searchBarWrapper .container .flex .filters-trigger button:nth-child(3) svg path {
   stroke-width: 1.7;
 }
-#search-bar-wrapper .container .flex .filters-trigger button #advancedFilters__count {
+#searchBarWrapper .container .flex .filters-trigger button #advancedFilters__count {
   margin-left: 3px;
   font-weight: 700;
-  color: #FFF;
-  background: #c6ad8f;
+  color: #1c2637;
+  background: white;
   border-radius: 4px;
   height: 20px;
   width: 20px;
   font-size: 13px;
 }
 
-#listing-wrapper {
+#listingWrapper {
   padding-bottom: 25px;
 }
-#listing-wrapper .container #listing-view {
+#listingWrapper .container #listing-view {
   padding-top: 10px;
   padding-bottom: 20px;
 }
-#listing-wrapper .container #listing-view .grid {
+#listingWrapper .container #listing-view .grid {
   gap: 5px;
 }
-#listing-wrapper .container #listing-view .grid h1 {
+#listingWrapper .container #listing-view .grid h1 {
   font-size: 16px;
   font-weight: 600;
 }
-#listing-wrapper .container #listing-view .grid p {
+#listingWrapper .container #listing-view .grid p {
   font-size: 14px;
   text-decoration: underline;
   color: rgba(4, 19, 43, 0.613);
   font-weight: 400;
   margin: 0;
 }
-#listing-wrapper .container #results .container #results-container {
+#listingWrapper .container #results .container #results-container {
   display: flex;
   flex-direction: column;
   gap: 17px;
 }
 @media (min-width: 992px) {
-  #listing-wrapper .container #results .container #results-container {
+  #listingWrapper .container #results .container #results-container {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 15px;
   }
 }
-#listing-wrapper .container #results .container #results-container .flat-item__element {
+#listingWrapper .container #results .container #results-container .flat-item__element {
   flex: 0 1 calc(33.33% - 10px);
 }
-#listing-wrapper .container #results .container .no-results-container .no-results-title {
+#listingWrapper .container #results .container .no-results-container .no-results-title {
   color: #2a2b2f;
   font-size: 15px;
   font-weight: 500;
   margin-bottom: 8px;
 }
-#listing-wrapper .container #results .container .no-results-container .no-results-message {
+#listingWrapper .container #results .container .no-results-container .no-results-message {
   font-size: 14px;
   margin-bottom: 0;
   color: #2a2b2f;
@@ -297,6 +297,7 @@ button {
   align-items: center;
   padding-block: 15px 15px;
   box-shadow: rgba(99, 99, 99, 0.1) 1px 2px 5px 0px;
+  border-bottom: 1px solid #e9e9e9;
   position: sticky;
   background: white;
   z-index: 100;
@@ -305,22 +306,25 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__close {
   margin-right: auto;
   margin-left: 20px;
+  background: #f6f6f6;
+  padding: 7px;
+  border-radius: 4px;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__close svg {
-  width: 23px;
+  width: 16px;
   height: auto;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__close svg path {
-  stroke: #212121;
-  stroke-width: 2;
+  stroke: #1c2637;
+  stroke-width: 2.7;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav p {
   position: absolute;
   left: 15%;
   margin: 0 0 2px 0;
   color: #212121;
-  font-size: 23px;
-  font-weight: 700;
+  font-size: 22px;
+  font-weight: 600;
   line-height: 1.32;
   overflow: hidden;
   text-align: center;
@@ -330,7 +334,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__clear-btn {
   margin-left: auto;
   margin-right: 20px;
-  font-size: 17px;
+  font-size: 16px;
   font-weight: 470;
   color: #212121;
   line-height: 1;
@@ -369,7 +373,7 @@ button {
   gap: 8px;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons button {
-  background: #f2f4f5;
+  background: #f6f6f6;
   color: #212121;
   font-size: 15px;
   font-weight: 400;
@@ -382,10 +386,11 @@ button {
   box-sizing: border-box;
   touch-action: manipulation;
   transition: transform 0.1s ease;
+  box-shadow: inset 0 0 0 1px #e9e9e9;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons button.selected {
-  color: #c6ad8f;
-  box-shadow: inset 0 0 0 1.8px #c6ad8f;
+  color: #1c2637;
+  box-shadow: inset 0 0 0 1px #3cd37b;
   background: #FFF;
   transform: scale(1);
   animation: bounceBack 0.3s ease;
@@ -403,7 +408,7 @@ button {
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .investment-button {
   width: auto;
-  font-size: 17px;
+  font-size: 16px;
   font-weight: 400;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-button {
@@ -412,14 +417,14 @@ button {
   width: 48%;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .features-button {
-  font-size: 17px;
+  font-size: 16px;
   padding: 11px 14px;
   width: auto;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .room-button {
   width: 51px;
   height: 48px;
-  font-size: 17px;
+  font-size: 16px;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .floor-button {
   width: 42px;
@@ -439,7 +444,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox .status-checkbox-box {
   width: 22px;
   height: 22px;
-  border: 2px solid #c6ad8f;
+  border: 2px solid #1c2637;
   border-radius: 4px;
   margin-right: 10px;
   transition: border-color 0.3s ease, background-color 0.3s ease;
@@ -460,8 +465,8 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box {
-  background-color: #c6ad8f;
-  border-color: #c6ad8f;
+  background-color: #1c2637;
+  border-color: #1c2637;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box::after {
   opacity: 1;
@@ -472,12 +477,12 @@ button {
   touch-action: manipulation;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-button {
-  background-color: #f2f4f5;
+  background-color: #f6f6f6;
   padding: 0 15px;
-  font-size: 17px;
+  font-size: 16px;
   color: #212121;
   height: 48px;
-  border: none;
+  border: 1px solid #e9e9e9;
   box-sizing: border-box;
   touch-action: manipulation;
   border-radius: 4px;
@@ -498,8 +503,9 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content {
   display: none;
   position: absolute;
-  border-top: 2px solid #c6ad8f;
-  background-color: #f2f4f5;
+  border: 1px solid #e9e9e9;
+  border-top: 2px solid #1c2637;
+  background-color: #f6f6f6;
   width: 100%;
   z-index: 1;
   max-height: 200px;
@@ -524,14 +530,14 @@ button {
   width: 20px;
   height: 20px;
   border-radius: 4px;
-  border: 2px solid #c6ad8f;
+  border: 2px solid #1c2637;
   position: relative;
   margin-right: 10px;
   cursor: pointer;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked {
-  background-color: #c6ad8f;
-  border-color: #c6ad8f;
+  background-color: #1c2637;
+  border-color: #1c2637;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked::after {
   content: "";
@@ -547,7 +553,7 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:hover {
-  border-color: #c6ad8f;
+  border-color: #1c2637;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__double-dropdown {
   display: flex;
@@ -567,6 +573,9 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__double-dropdown .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item {
   position: relative;
 }
+#advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__double-dropdown .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item.selected {
+  background: white;
+}
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__double-dropdown .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item::after {
   content: "";
 }
@@ -578,7 +587,7 @@ button {
   transform: translateY(-50%);
   width: 15px;
   height: 12px;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%2301b474" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%233cd37b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -598,11 +607,11 @@ button {
   height: 2px;
   border: none;
   border-radius: 5px;
-  background: #f2f4f5;
+  background: #f6f6f6;
   box-shadow: none;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-connects .noUi-connect {
-  background: #c6ad8f;
+  background: #1c2637;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle {
   width: 24px;
@@ -611,7 +620,7 @@ button {
   border-radius: 50px;
   box-shadow: none;
   background: #FFF;
-  border: 2px solid #c6ad8f;
+  border: 2px solid #1c2637;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::before, #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::after {
   display: none;
@@ -714,6 +723,7 @@ button {
   bottom: 0;
   height: 81px;
   width: 100%;
+  border-top: 1px solid #e9e9e9;
   box-shadow: rgba(99, 99, 99, 0.1) 0px -1px 5px 0px;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__footer .advancedFilters__buttons__container {
@@ -722,7 +732,7 @@ button {
   justify-content: space-between;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__footer .advancedFilters__buttons__container .advancedFilters__search__button {
-  background: #102838;
+  background: #1c2637;
   padding: 7px 12px;
   font-weight: 600;
   border-radius: 4px;
@@ -901,11 +911,10 @@ button {
 }
 
 .flat-item__element .grid__view {
-  border: 1px solid #C7C7C7;
+  border: 1px solid #e9e9e9;
   background: #FFF;
-  border-radius: 8px;
+  border-radius: 4px;
   padding: 1rem;
-  box-shadow: 0 2px 8px rgba(3, 74, 206, 0.1215686275);
 }
 .flat-item__element .grid__view:hover {
   border-color: #A6A6A6;
@@ -917,27 +926,33 @@ button {
 }
 .flat-item__element .grid__view .atts .grid__header .grid__status.status-wolne span {
   color: white;
-  background: #1769E2;
+  background: #1c2637;
   border: none;
-  padding: 2px 10px;
-  font-size: 14px;
+  padding: 4px 10px;
+  font-size: 11px;
   border-radius: 3px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 .flat-item__element .grid__view .atts .grid__header .grid__status.status-sprzedane span {
   color: white;
   background: #C7C7C7;
   border: none;
-  padding: 2px 10px;
-  font-size: 14px;
+  padding: 4px 10px;
+  font-size: 11px;
   border-radius: 3px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 .flat-item__element .grid__view .atts .grid__header .grid__status.status-zarezerwowane span {
   color: #616161;
   background: white;
   border: 1px solid #616161;
-  padding: 2px 10px;
-  font-size: 14px;
+  padding: 4px 10px;
+  font-size: 11px;
   border-radius: 3px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 .flat-item__element .grid__view .atts .grid__thumbnail {
   display: flex;
@@ -956,7 +971,7 @@ button {
 }
 .flat-item__element .grid__view .atts .grid__content .grid__investment span {
   line-height: 1;
-  font-size: 14.7px;
+  font-size: 16px;
   color: #212121;
 }
 .flat-item__element .grid__view .atts .grid__content .grid__investment span:first-child {
@@ -964,8 +979,8 @@ button {
 }
 .flat-item__element .grid__view .atts .grid__content .grid__num span {
   line-height: 1;
-  font-size: 23px;
-  font-weight: 650;
+  font-size: 28px;
+  font-weight: 500;
   color: #212121;
 }
 .flat-item__element .grid__view .atts .grid__content .grid__table {
@@ -992,9 +1007,10 @@ button {
   align-items: center;
   justify-content: center;
   display: flex;
-  font-weight: 500;
+  font-weight: 400;
   color: #212121;
   height: 40px;
+  font-size: 16px;
   border-radius: 7px;
-  background: #E8E8E8;
+  background: #f6f6f6;
 }/*# sourceMappingURL=main.css.map */
