--- a/themes/flatgroup/scss/pages/_search-flat.scss
+++ b/themes/flatgroup/scss/pages/_search-flat.scss
@@ -1,4 +1,4 @@
-#search-bar-wrapper {
+#searchBarWrapper {
   position: sticky;
   top: 0;
   transition: top 0.23s ease-in-out;
@@ -16,7 +16,7 @@
         gap: 7px;
 
         button {
-          background: $kui-theme-dark;
+          background: $kui-theme;
           border: none;
           height: 42px;
           width: 100%;
@@ -52,8 +52,8 @@
           #advancedFilters__count {
             margin-left: 3px;
             font-weight: 700;
-            color: $pure-white;
-            background: $kui-theme;
+            color: $kui-theme;
+            background: $kui-white;
             border-radius: 4px;
             height: 20px;
             width: 20px;
@@ -65,7 +65,7 @@
   }
 }
 
-#listing-wrapper {
+#listingWrapper {
   padding-bottom: 25px;
 
   .container {
