--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -93,7 +93,9 @@ $theme-blue: #006ce4;
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
 
-$kui-theme: #9c785b;
+// $kui-theme: #9c785b;
+$kui-theme: #323b48;
+$kui-theme-secondary: #9c785b;
 $kui-theme-dark: #102838;
 $kui-theme-200: #a67f5f;
 $kui-green-highlight: #3cd37b;
@@ -103,5 +105,12 @@ $kui-theme-light: #f6f6f6;
 $kui-white: white;
 $kui-black: #212121;
 $kui-disabled: #f6f6f6;
+$kui-disabled-100: #f4f4f4;
 $kui-disabled-200: #e9e9e9;
+$kui-disabled-300: #d2d2d2;
+$kui-disabled-400: #bfbfbf;
 $kui-disabled-500: #969696;
+$kui-disabled-600: #7a7a7a;
+$kui-disabled-700: #5e5e5e;
+$kui-disabled-800: #3f3f3f;
+$kui-disabled-900: #1f1f1f;
