--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -113,12 +113,10 @@
         #advancedFilters__clear-btn {
           margin-left: auto;
           margin-right: 20px;
-          text-decoration: underline;
           font-size: 16px;
           font-weight: 470;
           color: $black-color-500;
           line-height: 1;
-          opacity: 0.65;
         }
       }
 
@@ -379,6 +377,13 @@
                 display: flex;
                 gap: 10px;
 
+                .price-field__title {
+                  font-size: 15px;
+                  opacity: 0.5;
+                  margin-bottom: 7px;
+                  line-height: 1;
+                }
+
                 .advancedFilters__parameters__dropdown {
                   flex: 1;
                   box-sizing: border-box;
@@ -417,7 +422,7 @@
                         transform: translateY(-50%);
                         width: 15px;
                         height: 12px;
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%233cd37b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="%239c785b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
                         background-repeat: no-repeat;
                         background-size: contain;
                       }
@@ -675,14 +680,6 @@
                 margin-right: 6px;
               }
             }
-          }
-
-          .advancedFilters__clear {
-            padding: 7px 12px;
-            text-decoration: underline;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 1.5;
           }
         }
       }
