--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -90,7 +90,7 @@
             height: auto;
 
             path {
-              stroke: $kui-theme;
+              stroke: $kui-black;
               stroke-width: 2.7;
             }
           }
@@ -102,7 +102,7 @@
           margin: 0 0 2px 0;
           color: $black-color-500;
           font-size: 22px;
-          font-weight: 600;
+          font-weight: 400;
           line-height: 1.32;
           overflow: hidden;
           text-align: center;
