--- a/themes/flatgroup/scss/main.css
+++ b/themes/flatgroup/scss/main.css
@@ -74,6 +74,10 @@ button {
   outline: none !important;
 }
 
+#app-header {
+  height: 57px;
+  background: #212121;
+}
 #app-header .container .app-header__content .app-header__logo svg {
   width: 140px;
   height: auto;
@@ -124,6 +128,25 @@ button {
   opacity: 0.8;
 }
 
+#headingPageContent .breadcrumbs {
+  gap: 5px;
+  padding-block: 10px 0;
+  text-transform: uppercase;
+}
+#headingPageContent .breadcrumbs p {
+  font-size: 14px;
+  margin: 0;
+}
+#headingPageContent .breadcrumbs p.active {
+  color: #7a7a7a;
+}
+#headingPageContent h5 {
+  padding-top: 15px;
+  padding-bottom: 10px;
+  font-size: 27px;
+  font-weight: 400;
+}
+
 #searchBarWrapper {
   position: sticky;
   top: 0;
@@ -140,14 +163,14 @@ button {
   gap: 7px;
 }
 #searchBarWrapper .container .flex .filters-trigger button {
-  background: #323b48;
-  border: none;
-  height: 40px;
+  background: white;
+  border: 1px solid #969696;
+  height: 48px;
   width: 100%;
   padding: 0 10px;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
-  color: white;
+  color: #212121;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -158,7 +181,7 @@ button {
   height: auto;
 }
 #searchBarWrapper .container .flex .filters-trigger button svg path {
-  stroke: white;
+  stroke: #212121;
   stroke-width: 2;
 }
 #searchBarWrapper .container .flex .filters-trigger button:nth-child(3) svg path {
@@ -167,8 +190,8 @@ button {
 #searchBarWrapper .container .flex .filters-trigger button #advancedFilters__count {
   margin-left: 3px;
   font-weight: 700;
-  color: #323b48;
-  background: white;
+  color: white;
+  background: #212121;
   height: 20px;
   width: 20px;
   font-size: 13px;
@@ -334,7 +357,7 @@ button {
   height: auto;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav #advancedFilters__close svg path {
-  stroke: #323b48;
+  stroke: #212121;
   stroke-width: 2.7;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav p {
@@ -343,7 +366,7 @@ button {
   margin: 0 0 2px 0;
   color: #212121;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.32;
   overflow: hidden;
   text-align: center;
@@ -407,8 +430,8 @@ button {
   box-shadow: inset 0 0 0 1px #e9e9e9;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons button.selected {
-  color: #323b48;
-  box-shadow: inset 0 0 0 2px #323b48;
+  color: #212121;
+  box-shadow: inset 0 0 0 2px #212121;
   background: #FFF;
   transform: scale(1);
   animation: bounceBack 0.3s ease;
@@ -462,7 +485,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox .status-checkbox-box {
   width: 22px;
   height: 22px;
-  border: 2px solid #323b48;
+  border: 2px solid #212121;
   margin-right: 10px;
   transition: border-color 0.3s ease, background-color 0.3s ease;
   display: inline-block;
@@ -482,8 +505,8 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box {
-  background-color: #323b48;
-  border-color: #323b48;
+  background-color: #212121;
+  border-color: #212121;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box::after {
   opacity: 1;
@@ -520,7 +543,7 @@ button {
   display: none;
   position: absolute;
   border: 1px solid #e9e9e9;
-  border-top: 2px solid #323b48;
+  border-top: 2px solid #212121;
   background-color: #f6f6f6;
   width: 100%;
   z-index: 1;
@@ -545,15 +568,15 @@ button {
   appearance: none;
   width: 20px;
   height: 20px;
-  border: 2px solid #323b48;
+  border: 2px solid #212121;
   border-radius: 0;
   position: relative;
   margin-right: 10px;
   cursor: pointer;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked {
-  background-color: #323b48;
-  border-color: #323b48;
+  background-color: #212121;
+  border-color: #212121;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked::after {
   content: "";
@@ -569,7 +592,7 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:hover {
-  border-color: #323b48;
+  border-color: #212121;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__double-dropdown {
   display: flex;
@@ -633,7 +656,7 @@ button {
   box-shadow: none;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-connects .noUi-connect {
-  background: #323b48;
+  background: #212121;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle {
   width: 24px;
@@ -642,7 +665,7 @@ button {
   border-radius: 50px;
   box-shadow: none;
   background: #FFF;
-  border: 2px solid #323b48;
+  border: 2px solid #212121;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::before, #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::after {
   display: none;
@@ -754,7 +777,7 @@ button {
   justify-content: space-between;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__footer .advancedFilters__buttons__container .advancedFilters__search__button {
-  background: #323b48;
+  background: #212121;
   padding: 7px 12px;
   font-weight: 600;
   height: 48px;
@@ -927,7 +950,7 @@ button {
 .flat-item__element .property-grid__view {
   border: 1px solid #969696;
   background: #FFF;
-  padding: 1rem;
+  padding: 24px;
 }
 .flat-item__element .property-grid__view:hover {
   border-color: #A6A6A6;
@@ -937,9 +960,12 @@ button {
   flex-direction: column;
   gap: 10px;
 }
+.flat-item__element .property-grid__view .property-grid__container .property-grid__header .property-grid__status span {
+  font-weight: 700;
+}
 .flat-item__element .property-grid__view .property-grid__container .property-grid__header .property-grid__status.status-wolne span {
   color: white;
-  background: #323b48;
+  background: #212121;
   border: none;
   padding: 4px 10px;
   font-size: 11px;
